* Docman: support document versioning. (TrivialDev)
* Docman: support cross ref. forum, documents, task or artifact. (TrivialDev)
* FRS: link package release to tracker roadmap. (TrivialDev)
* Layout: new dynamic quickNav menu: based on user activity to select 5 more visited projects (TrivialDev)
* Plugin AuthBuiltin: add captcha after 3 attempts with the same login [#795] (TrivialDev)
* Projects Page: add paging system in full_list and tag_cloud subpages (TrivialDev)
* SearchEngine: support only FTI queries (TrivialDev)
* Search: index project tags and use them for search (Roland Mas)
* Search: provide language-specific settings for better indexation/search (Roland Mas)
* Site Admin: add paging system in userlist page [#799] (TrivialDev)
* Site Admin: support widgets for forge home page (TrivialDev)
* Spellcheck (Anders Jonsson)
* Taskboard: support multiple taskboards per project [#785] (TrivialDev)
* Taskboard: support filtering tasks [#786] (TrivialDev)
* Tracker: keep values in artifact new submit form on error. (TrivialDev)
* Tracker: add new extrafield: text regex (TrivialDev)
* Tracker: add new extrafield: User (TrivialDev)
* Tracker: add support for mandatory fields on workflow of artifact (TrivialDev)
* Tracker: add support for description on extrafield to be used in tooltip (TrivialDev)
* Tracker: fix extrafield cloning when not using default template fusionforge project [#829] (TrivialDev)
* Tracker: add support for autoassign [#151] & [#149] (TrivialDev)
* Utils: cross ref document. Use [DNNN] where NNN is the ID of the document. (TrivialDev)
* Web UI: upgrade splitter jquery plugin to 0.20.0 (TrivialDev)
* Web UI: upgrade jquery ui to 1.11.4 (TrivialDev)
* Widget MySystasks: new widget for user to display systasks perform on user projects (TrivialDev)
* Widget ProjectScmStats: new widget for project to display SCM stats (TrivialDev)

FusionForge 6.0.5:
* Plugin SCM SVN: fix activity when SVN repository is private [#813] (TrivialDev)