@@ -26,6 +26,10 @@ base_dn = "ou=users,dc=example,dc=com"
 manager_dn = ''
 manager_password = ''
 
+; delegate the authentication to a reverse proxy or any external service that support X_FORWARD_USER
+; WARNING: YOU BETTER KNOW WHAT YOU ARE DOING IF YOU SET THIS OPTION TO TRUE
+use_x_forward_user = false
+
 ; LDAP attributes mapping for data sync
 ; Comma-separated list of fusionforgefield=ldapfield
 ; the ldapfield MUST be in lower case
